--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-10939d76.js",
+    "file": "_app/immutable/start-66773cf5.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-ca361f81.js",
-      "_singletons-51950882.js",
+      "_singletons-b09f6d2c.js",
       "_paths-6cd3a76e.js"
     ],
     "dynamicImports": [
@@ -22,29 +22,29 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-0beffcf2.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-eff9f53b.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-ca361f81.js",
-      "_stores-640f021a.js",
+      "_stores-4ea80c32.js",
       "_paths-6cd3a76e.js",
       "_index-d04bae4a.js",
       "_index-07fdd89f.js",
       "_index-03df43bf.js",
-      "_singletons-51950882.js"
+      "_singletons-b09f6d2c.js"
     ],
     "css": [
       "_app/immutable/assets/_layout-c1b2363d.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-1797e259.js",
+    "file": "_app/immutable/components/error.svelte-b737b9ae.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-ca361f81.js",
-      "_stores-640f021a.js"
+      "_stores-4ea80c32.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -175,12 +175,12 @@
     ]
   },
   "src/routes/[lang]/about/+page.js": {
-    "file": "_app/immutable/modules/pages/_lang_/about/_page.js-9a0c73e4.js",
+    "file": "_app/immutable/modules/pages/_lang_/about/_page.js-c2c470b5.js",
     "src": "src/routes/[lang]/about/+page.js",
     "isEntry": true,
     "imports": [
       "_paths-6cd3a76e.js",
-      "__page-fce72c9d.js"
+      "__page-c8f8b75b.js"
     ]
   },
   "src/routes/[lang]/contact/+page.js": {
@@ -226,8 +226,8 @@
       "__page-0693e3f5.js"
     ]
   },
-  "_singletons-51950882.js": {
-    "file": "_app/immutable/chunks/singletons-51950882.js",
+  "_singletons-b09f6d2c.js": {
+    "file": "_app/immutable/chunks/singletons-b09f6d2c.js",
     "imports": [
       "_index-d04bae4a.js",
       "_paths-6cd3a76e.js"
@@ -245,11 +245,11 @@
       "_index-ca361f81.js"
     ]
   },
-  "_stores-640f021a.js": {
-    "file": "_app/immutable/chunks/stores-640f021a.js",
+  "_stores-4ea80c32.js": {
+    "file": "_app/immutable/chunks/stores-4ea80c32.js",
     "imports": [
       "_index-ca361f81.js",
-      "_singletons-51950882.js"
+      "_singletons-b09f6d2c.js"
     ]
   },
   "_index-07fdd89f.js": {
@@ -284,8 +284,8 @@
   "__page-ca50c3e5.js": {
     "file": "_app/immutable/chunks/_page-ca50c3e5.js"
   },
-  "__page-fce72c9d.js": {
-    "file": "_app/immutable/chunks/_page-fce72c9d.js",
+  "__page-c8f8b75b.js": {
+    "file": "_app/immutable/chunks/_page-c8f8b75b.js",
     "imports": [
       "_paths-6cd3a76e.js"
     ]
@@ -315,7 +315,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-5426c165.js",
+    "file": "_app/immutable/chunks/0-662e0e47.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -324,7 +324,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-edbce12c.js",
+    "file": "_app/immutable/chunks/1-a10e68fd.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -350,11 +350,11 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-15ddcb4f.js",
+    "file": "_app/immutable/chunks/4-b76871e6.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-fce72c9d.js",
+      "__page-c8f8b75b.js",
       "src/routes/[lang]/about/+page.svelte"
     ]
   },
@@ -403,32 +403,32 @@
       "src/routes/projects/+page.svelte"
     ]
   },
-  "index.css": {
-    "file": "_app/immutable/assets/index-af927694.css",
-    "src": "index.css"
-  },
   "src/routes/+layout.css": {
     "file": "_app/immutable/assets/_layout-c1b2363d.css",
     "src": "src/routes/+layout.css"
-  },
-  "src/routes/[lang]/about/+page.css": {
-    "file": "_app/immutable/assets/_page-68326b9b.css",
-    "src": "src/routes/[lang]/about/+page.css"
-  },
-  "src/routes/[lang]/contact/+page.css": {
-    "file": "_app/immutable/assets/_page-4489d4a9.css",
-    "src": "src/routes/[lang]/contact/+page.css"
-  },
-  "src/routes/projects/+page.css": {
-    "file": "_app/immutable/assets/_page-b5fd4fd0.css",
-    "src": "src/routes/projects/+page.css"
   },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-d77be693.css",
     "src": "src/routes/+page.css"
   },
+  "index.css": {
+    "file": "_app/immutable/assets/index-af927694.css",
+    "src": "index.css"
+  },
   "src/routes/[lang]/+page.css": {
     "file": "_app/immutable/assets/_page-0738999b.css",
     "src": "src/routes/[lang]/+page.css"
+  },
+  "src/routes/about/+page.css": {
+    "file": "_app/immutable/assets/_page-68326b9b.css",
+    "src": "src/routes/about/+page.css"
+  },
+  "src/routes/contact/+page.css": {
+    "file": "_app/immutable/assets/_page-4489d4a9.css",
+    "src": "src/routes/contact/+page.css"
+  },
+  "src/routes/projects/+page.css": {
+    "file": "_app/immutable/assets/_page-b5fd4fd0.css",
+    "src": "src/routes/projects/+page.css"
   }
 }
