--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-66773cf5.js",
+    "file": "_app/immutable/start-19e211a3.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
-      "_singletons-b09f6d2c.js",
+      "_index-95e33253.js",
+      "_singletons-63b4d6f1.js",
       "_paths-6cd3a76e.js"
     ],
     "dynamicImports": [
@@ -22,37 +22,37 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-eff9f53b.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-684cc814.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
-      "_stores-4ea80c32.js",
+      "_index-95e33253.js",
+      "_stores-f28b28eb.js",
       "_paths-6cd3a76e.js",
-      "_index-d04bae4a.js",
-      "_index-07fdd89f.js",
-      "_index-03df43bf.js",
-      "_singletons-b09f6d2c.js"
+      "_singletons-63b4d6f1.js",
+      "_index-4413c9bc.js",
+      "_index-126b5757.js",
+      "_index-9a60eac8.js"
     ],
     "css": [
       "_app/immutable/assets/_layout-c1b2363d.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-b737b9ae.js",
+    "file": "_app/immutable/components/error.svelte-ebfd1447.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
-      "_stores-4ea80c32.js"
+      "_index-95e33253.js",
+      "_stores-f28b28eb.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-f86cccf6.js",
+    "file": "_app/immutable/components/pages/_page.svelte-1fb9f2f1.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js"
     ],
     "css": [
@@ -60,88 +60,91 @@
     ]
   },
   "src/routes/[lang]/+page.svelte": {
-    "file": "_app/immutable/components/pages/_lang_/_page.svelte-91b241c8.js",
+    "file": "_app/immutable/components/pages/_lang_/_page.svelte-6757cf85.js",
     "src": "src/routes/[lang]/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
-      "_index-03df43bf.js",
-      "_constants-c3307eea.js"
+      "_index-95e33253.js",
+      "_constants-c3307eea.js",
+      "_index-4413c9bc.js"
     ],
     "css": [
       "_app/immutable/assets/_page-0738999b.css"
     ]
   },
   "src/routes/[lang]/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/_lang_/about/_page.svelte-44fb1b0e.js",
+    "file": "_app/immutable/components/pages/_lang_/about/_page.svelte-f46cecd3.js",
     "src": "src/routes/[lang]/about/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js",
-      "_index-07fdd89f.js"
+      "_index-4413c9bc.js",
+      "_index-126b5757.js"
     ],
     "css": [
       "_app/immutable/assets/_page-68326b9b.css"
     ]
   },
   "src/routes/[lang]/contact/+page.svelte": {
-    "file": "_app/immutable/components/pages/_lang_/contact/_page.svelte-85ff27b1.js",
+    "file": "_app/immutable/components/pages/_lang_/contact/_page.svelte-f3b8ef1b.js",
     "src": "src/routes/[lang]/contact/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js",
-      "_index-07fdd89f.js"
+      "_index-4413c9bc.js",
+      "_index-126b5757.js"
     ],
     "css": [
       "_app/immutable/assets/_page-4489d4a9.css"
     ]
   },
   "src/routes/[lang]/projects/+page.svelte": {
-    "file": "_app/immutable/components/pages/_lang_/projects/_page.svelte-c5ad884d.js",
+    "file": "_app/immutable/components/pages/_lang_/projects/_page.svelte-137fff95.js",
     "src": "src/routes/[lang]/projects/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
-      "_constants-c3307eea.js"
+      "_index-95e33253.js",
+      "_constants-c3307eea.js",
+      "_index-4413c9bc.js"
     ],
     "css": [
       "_app/immutable/assets/_page-b5fd4fd0.css"
     ]
   },
   "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-50592048.js",
+    "file": "_app/immutable/components/pages/about/_page.svelte-02c0de02.js",
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js",
-      "_index-07fdd89f.js"
+      "_index-126b5757.js"
     ],
     "css": [
       "_app/immutable/assets/_page-68326b9b.css"
     ]
   },
   "src/routes/contact/+page.svelte": {
-    "file": "_app/immutable/components/pages/contact/_page.svelte-3a30c460.js",
+    "file": "_app/immutable/components/pages/contact/_page.svelte-5e7afa73.js",
     "src": "src/routes/contact/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js",
-      "_index-07fdd89f.js"
+      "_index-126b5757.js"
     ],
     "css": [
       "_app/immutable/assets/_page-4489d4a9.css"
     ]
   },
   "src/routes/projects/+page.svelte": {
-    "file": "_app/immutable/components/pages/projects/_page.svelte-ce57b766.js",
+    "file": "_app/immutable/components/pages/projects/_page.svelte-70141692.js",
     "src": "src/routes/projects/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-ca361f81.js",
+      "_index-95e33253.js",
       "_constants-c3307eea.js"
     ],
     "css": [
@@ -149,13 +152,13 @@
     ]
   },
   "src/routes/+layout.js": {
-    "file": "_app/immutable/modules/pages/_layout.js-f7143b35.js",
+    "file": "_app/immutable/modules/pages/_layout.js-876ac16f.js",
     "src": "src/routes/+layout.js",
     "isEntry": true,
     "imports": [
       "_paths-6cd3a76e.js",
-      "_index-03df43bf.js",
-      "__layout-70024127.js"
+      "_index-4413c9bc.js",
+      "__layout-6ba9f841.js"
     ]
   },
   "src/routes/+page.js": {
@@ -175,12 +178,12 @@
     ]
   },
   "src/routes/[lang]/about/+page.js": {
-    "file": "_app/immutable/modules/pages/_lang_/about/_page.js-c2c470b5.js",
+    "file": "_app/immutable/modules/pages/_lang_/about/_page.js-42ef9ccc.js",
     "src": "src/routes/[lang]/about/+page.js",
     "isEntry": true,
     "imports": [
       "_paths-6cd3a76e.js",
-      "__page-c8f8b75b.js"
+      "__page-d3613f9b.js"
     ]
   },
   "src/routes/[lang]/contact/+page.js": {
@@ -192,12 +195,12 @@
     ]
   },
   "src/routes/[lang]/projects/+page.js": {
-    "file": "_app/immutable/modules/pages/_lang_/projects/_page.js-951fc3bd.js",
+    "file": "_app/immutable/modules/pages/_lang_/projects/_page.js-d3934aa5.js",
     "src": "src/routes/[lang]/projects/+page.js",
     "isEntry": true,
     "imports": [
       "_paths-6cd3a76e.js",
-      "__page-93bd7004.js"
+      "__page-8df86721.js"
     ]
   },
   "src/routes/about/+page.js": {
@@ -226,53 +229,53 @@
       "__page-0693e3f5.js"
     ]
   },
-  "_singletons-b09f6d2c.js": {
-    "file": "_app/immutable/chunks/singletons-b09f6d2c.js",
+  "_singletons-63b4d6f1.js": {
+    "file": "_app/immutable/chunks/singletons-63b4d6f1.js",
     "imports": [
-      "_index-d04bae4a.js",
+      "_index-9a60eac8.js",
       "_paths-6cd3a76e.js"
     ]
   },
   "_paths-6cd3a76e.js": {
     "file": "_app/immutable/chunks/paths-6cd3a76e.js"
   },
-  "_index-ca361f81.js": {
-    "file": "_app/immutable/chunks/index-ca361f81.js"
+  "_index-95e33253.js": {
+    "file": "_app/immutable/chunks/index-95e33253.js"
   },
-  "_index-d04bae4a.js": {
-    "file": "_app/immutable/chunks/index-d04bae4a.js",
+  "_index-9a60eac8.js": {
+    "file": "_app/immutable/chunks/index-9a60eac8.js",
     "imports": [
-      "_index-ca361f81.js"
+      "_index-95e33253.js"
     ]
   },
-  "_stores-4ea80c32.js": {
-    "file": "_app/immutable/chunks/stores-4ea80c32.js",
+  "_stores-f28b28eb.js": {
+    "file": "_app/immutable/chunks/stores-f28b28eb.js",
     "imports": [
-      "_index-ca361f81.js",
-      "_singletons-b09f6d2c.js"
+      "_index-95e33253.js",
+      "_singletons-63b4d6f1.js"
     ]
   },
-  "_index-07fdd89f.js": {
-    "file": "_app/immutable/chunks/index-07fdd89f.js",
+  "_index-4413c9bc.js": {
+    "file": "_app/immutable/chunks/index-4413c9bc.js",
     "imports": [
-      "_index-ca361f81.js"
+      "_index-9a60eac8.js",
+      "_index-95e33253.js"
+    ]
+  },
+  "_index-126b5757.js": {
+    "file": "_app/immutable/chunks/index-126b5757.js",
+    "imports": [
+      "_index-95e33253.js"
     ],
     "css": [
       "_app/immutable/assets/index-af927694.css"
     ]
   },
-  "_index-03df43bf.js": {
-    "file": "_app/immutable/chunks/index-03df43bf.js",
-    "imports": [
-      "_index-d04bae4a.js",
-      "_index-ca361f81.js"
-    ]
-  },
-  "__layout-70024127.js": {
-    "file": "_app/immutable/chunks/_layout-70024127.js",
+  "__layout-6ba9f841.js": {
+    "file": "_app/immutable/chunks/_layout-6ba9f841.js",
     "imports": [
       "_paths-6cd3a76e.js",
-      "_index-03df43bf.js"
+      "_index-4413c9bc.js"
     ]
   },
   "_constants-c3307eea.js": {
@@ -284,8 +287,8 @@
   "__page-ca50c3e5.js": {
     "file": "_app/immutable/chunks/_page-ca50c3e5.js"
   },
-  "__page-c8f8b75b.js": {
-    "file": "_app/immutable/chunks/_page-c8f8b75b.js",
+  "__page-d3613f9b.js": {
+    "file": "_app/immutable/chunks/_page-d3613f9b.js",
     "imports": [
       "_paths-6cd3a76e.js"
     ]
@@ -293,8 +296,8 @@
   "__page-c6f46c34.js": {
     "file": "_app/immutable/chunks/_page-c6f46c34.js"
   },
-  "__page-93bd7004.js": {
-    "file": "_app/immutable/chunks/_page-93bd7004.js",
+  "__page-8df86721.js": {
+    "file": "_app/immutable/chunks/_page-8df86721.js",
     "imports": [
       "_paths-6cd3a76e.js"
     ]
@@ -315,16 +318,16 @@
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-662e0e47.js",
+    "file": "_app/immutable/chunks/0-86b74f9a.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
-      "__layout-70024127.js",
+      "__layout-6ba9f841.js",
       "src/routes/+layout.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-a10e68fd.js",
+    "file": "_app/immutable/chunks/1-07351820.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -332,7 +335,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-877423f1.js",
+    "file": "_app/immutable/chunks/2-50d7b32f.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -341,7 +344,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-72eb2d74.js",
+    "file": "_app/immutable/chunks/3-e76e7cb2.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -350,16 +353,16 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-b76871e6.js",
+    "file": "_app/immutable/chunks/4-c5e658b7.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-c8f8b75b.js",
+      "__page-d3613f9b.js",
       "src/routes/[lang]/about/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-c15761b9.js",
+    "file": "_app/immutable/chunks/5-da947054.js",
     "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
@@ -368,16 +371,16 @@
     ]
   },
   ".svelte-kit/generated/nodes/6.js": {
-    "file": "_app/immutable/chunks/6-527433fb.js",
+    "file": "_app/immutable/chunks/6-888fd4f1.js",
     "src": ".svelte-kit/generated/nodes/6.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-93bd7004.js",
+      "__page-8df86721.js",
       "src/routes/[lang]/projects/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/7.js": {
-    "file": "_app/immutable/chunks/7-cda4694d.js",
+    "file": "_app/immutable/chunks/7-bd1dd5f9.js",
     "src": ".svelte-kit/generated/nodes/7.js",
     "isDynamicEntry": true,
     "imports": [
@@ -386,7 +389,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/8.js": {
-    "file": "_app/immutable/chunks/8-d6cba8e4.js",
+    "file": "_app/immutable/chunks/8-adfd1ed6.js",
     "src": ".svelte-kit/generated/nodes/8.js",
     "isDynamicEntry": true,
     "imports": [
@@ -395,7 +398,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/9.js": {
-    "file": "_app/immutable/chunks/9-d5124430.js",
+    "file": "_app/immutable/chunks/9-2c86eb5d.js",
     "src": ".svelte-kit/generated/nodes/9.js",
     "isDynamicEntry": true,
     "imports": [
@@ -407,13 +410,13 @@
     "file": "_app/immutable/assets/_layout-c1b2363d.css",
     "src": "src/routes/+layout.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-d77be693.css",
-    "src": "src/routes/+page.css"
-  },
   "index.css": {
     "file": "_app/immutable/assets/index-af927694.css",
     "src": "index.css"
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-d77be693.css",
+    "src": "src/routes/+page.css"
   },
   "src/routes/[lang]/+page.css": {
     "file": "_app/immutable/assets/_page-0738999b.css",
