--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-10f2ade5.js",
+    "file": "_app/immutable/start-3d71091c.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-95e33253.js",
-      "_singletons-cd75213d.js",
+      "_singletons-42b25826.js",
       "_paths-6cd3a76e.js"
     ],
     "dynamicImports": [
@@ -19,14 +19,14 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-31b88eca.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-0b7250fc.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-95e33253.js",
-      "_stores-c2d7336c.js",
+      "_stores-148319b0.js",
       "_paths-6cd3a76e.js",
-      "_singletons-cd75213d.js",
+      "_singletons-42b25826.js",
       "_index-4413c9bc.js",
       "_index-126b5757.js",
       "_index-9a60eac8.js"
@@ -36,24 +36,20 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-2dec73e0.js",
+    "file": "_app/immutable/components/error.svelte-396b0c59.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-95e33253.js",
-      "_stores-c2d7336c.js"
+      "_stores-148319b0.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-1fb9f2f1.js",
+    "file": "_app/immutable/components/pages/_page.svelte-d3f810e9.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-95e33253.js",
-      "_constants-c3307eea.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_page-d77be693.css"
+      "_index-95e33253.js"
     ]
   },
   "src/routes/[lang]/+page.svelte": {
@@ -162,8 +158,8 @@
       "__page-8df86721.js"
     ]
   },
-  "_singletons-cd75213d.js": {
-    "file": "_app/immutable/chunks/singletons-cd75213d.js",
+  "_singletons-42b25826.js": {
+    "file": "_app/immutable/chunks/singletons-42b25826.js",
     "imports": [
       "_index-9a60eac8.js",
       "_paths-6cd3a76e.js"
@@ -181,11 +177,11 @@
       "_index-95e33253.js"
     ]
   },
-  "_stores-c2d7336c.js": {
-    "file": "_app/immutable/chunks/stores-c2d7336c.js",
+  "_stores-148319b0.js": {
+    "file": "_app/immutable/chunks/stores-148319b0.js",
     "imports": [
       "_index-95e33253.js",
-      "_singletons-cd75213d.js"
+      "_singletons-42b25826.js"
     ]
   },
   "_index-4413c9bc.js": {
@@ -211,11 +207,11 @@
       "_index-4413c9bc.js"
     ]
   },
-  "_constants-c3307eea.js": {
-    "file": "_app/immutable/chunks/constants-c3307eea.js"
-  },
   "__page-d86dbbba.js": {
     "file": "_app/immutable/chunks/_page-d86dbbba.js"
+  },
+  "_constants-c3307eea.js": {
+    "file": "_app/immutable/chunks/constants-c3307eea.js"
   },
   "__page-ca50c3e5.js": {
     "file": "_app/immutable/chunks/_page-ca50c3e5.js"
@@ -236,7 +232,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-07b66f82.js",
+    "file": "_app/immutable/chunks/0-e9e558eb.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -245,7 +241,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-70830d86.js",
+    "file": "_app/immutable/chunks/1-0036325e.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -253,7 +249,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-50d7b32f.js",
+    "file": "_app/immutable/chunks/2-71c223b9.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -297,14 +293,6 @@
       "src/routes/[lang]/projects/+page.svelte"
     ]
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-c1b2363d.css",
-    "src": "src/routes/+layout.css"
-  },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-d77be693.css",
-    "src": "src/routes/+page.css"
-  },
   "index.css": {
     "file": "_app/immutable/assets/index-af927694.css",
     "src": "index.css"
@@ -324,5 +312,9 @@
   "src/routes/[lang]/projects/+page.css": {
     "file": "_app/immutable/assets/_page-b5fd4fd0.css",
     "src": "src/routes/[lang]/projects/+page.css"
+  },
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-c1b2363d.css",
+    "src": "src/routes/+layout.css"
   }
 }
