fixed issues & localization

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"svelte-fa": "^3.0.3"
+		"svelte-fa": "^3.0.3",
+		"sveltekit-i18n": "^2.2.2"
 	}
 }
